# SHA256

./: .gitignore  CMakeLists.txt  Makefile  README.md  client  server
documentation/: Relazione.aux  Relazione.fdb_latexmk  Relazione.fls  Relazione.tex  Relazione.toc
include/: common.h  sha256_utils.h
src/: cache_query.c  client.c  server.c  sha256_utils.c
src/client/: client.c
src/common/: protocol.h
src/server/: server.c
